[package]
name = "wape"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
select = "0.4.2"
reqwest = "0.9.5"
clap = { version = "2.32.0", features = [ "yaml" ]}
envy = "0.3.3"
dotenv = "0.13.0"
log = "0.4.6"
env_logger = "0.6.0"
serde = "1.0.82"
serde_derive = "1.0.82"
rayon = "1.0.3"
